# bimdata-read

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bimdata_read/: __init__.py  cache.py  client.py  snapshot.py
tests/: test_read.py
